k8s/apps/friend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friendservice
  namespace: petbro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friendservice
  template:
    metadata:
      labels:
        app: friendservice
    spec:
      containers:
        - name: friendservice
          image: petbro-friendservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 20
