k8s/apps/friend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friendservice
  namespace: petbro
spec:
  selector:
    app: friendservice
  ports:
    - port: 8082
      targetPort: 8082
